fix formatting bug where boxes would not align.

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@
 .img {
   width: 300px;
   float: left;
-  margin-left: 200px;
+  /* margin-left: 200px; */
   margin-right: 15px;
   display: block;
 }
@@ -59,6 +59,47 @@
   float: left;
   text-align: center;
 }
+.box2 {
+  width: 50%;
+  height: 155px;
+  border: solid rgb(0, 0, 0);
+  border-width: 1px;
+  display: block;
+  margin: auto;
+  background-color: rgb(255, 175, 175);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  float: left;
+  text-align: center;  
+}
+
+.box-main {
+  width: 100%;
+  border: solid rgb(170, 88, 88);
+  border-width: 1px;
+  display: block;
+  margin: auto;
+  background-color: rgb(119, 192, 97);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  float: left;
+  text-align: center;
+}
+
+.box2-main {
+  width: 100%;
+  height: 155px;
+  border: solid rgb(0, 0, 0);
+  border-width: 1px;
+  display: block;
+  margin: auto;
+  background-color: rgb(255, 175, 175);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  float: left;
+  text-align: center;  
+}
+
 
 body {
   background-color: burlywood;
